tests/traci/set_variable/TrafficLight/errors/UnknownTL/testclient.prog
simstep2 48
setvalue 0xc2 0x22 xxx <int> 0
simstep2 50

